# claude-desktop-buddy-tufty2350

./: .gitignore  CMakeLists.txt  README.md
src/: battery.cpp  battery.h  ble_bridge.cpp  ble_bridge.h  btstack_config.h  buddy.cpp  buddy.h  buddy_common.h  buttons.cpp  buttons.h  data.cpp  data.h  main.cpp  menu.cpp  menu.h  nus_service.gatt  power.cpp  power.h  rtc.cpp  rtc.h  settings.cpp  settings.h  stats.cpp  stats.h
src/drivers/st7789/: st7789.cpp  st7789.hpp
